# psudo-triangulation

./: CMakeLists.txt  README.md  input.txt  psudo-triangulation.cpp
